tests/snapshots/output__check_argument_wrong_type_verb-2.snap
---
source: tests/output.rs
expression: "format!(\"{:?}\", miette::Error::new(tc.unwrap_err()))"
---
  [31m×[0m The testcase returned an error

Error: 
  [31m×[0m An error occurred while parsing testcases

Error: 
  [31m×[0m An argument was of the wrong type
   ╭─[[36;1;4mtest.kdl:3:17[0m]
 [2m2[0m │             testcase {
 [2m3[0m │                 foobar not_a_number
   · [35;1m                ───┬──[0m[33;1m ──────┬─────[0m
   ·                    [35;1m│[0m         [33;1m╰── [33;1mthis one[0m[0m
   ·                    [35;1m╰── [35;1mThis node has an argument of a wrong kind[0m[0m
 [2m4[0m │             }
   ╰────
[36m  help: [0mExpected an integer
