tests/snapshots/output__check_unknown.snap
---
source: tests/output.rs
expression: "format!(\"{:?}\", miette::Error::new(tc.unwrap_err()))"
---
  [31m×[0m An error occurred while parsing testcases

Error: 
  [31m×[0m Could not find verb with this name
   ╭─[4:21]
 [2m3[0m │                 repeat 2 {
 [2m4[0m │                     not_found
   · [35;1m                    ─────────[0m
 [2m5[0m │                 }
   ╰────
